# repo-edu

./: .claudeignore  .codexignore  .gitattributes  .gitignore  .markdownlint-cli2.yaml  .markdownlint.yaml  AGENTS.md  CLAUDE.md  Cargo.toml  GEMINI.md  LICENSE  LICENSE-MIT  NOTICE  README.md  RUST_EVALUATION.md  WARP.md  biome.json  dprint.json  mise.toml  package.json  plan.md  pnpm-lock.yaml  pnpm-workspace.yaml  renovate.json  rumdl.toml  tsconfig.base.json  tsconfig.json
.claude/: plan.md  settings.json  (+1 more)
apps/repo-manage/: CLI.md  CONFIG_ARCHITECTURE_REQUIREMENTS.md  Cargo.toml  DESIGN_DECISIONS.md  README.md  SETTINGS_ANALYSIS_SUMMARY.txt  SETTINGS_ARCHITECTURE_ANALYSIS.md  SETTINGS_ARCHITECTURE_PROPOSAL.md  SETTINGS_QUICK_REFERENCE.md  example-students.yaml  index.html  package.json  settings-schema.json  test_settings.sh  tsconfig.json  vite.config.ts  vitest.config.ts
apps/repo-manage/.cargo/: config.toml
apps/repo-manage/cli/: CLAUDE.md  Cargo.toml
apps/repo-manage/cli/src/: main.rs  output.rs  util.rs
apps/repo-manage/cli/src/commands/: git.rs  lms.rs  mod.rs  profile.rs  repo.rs  roster.rs  validate.rs
apps/repo-manage/cli/tests/: integration_tests.rs
apps/repo-manage/core/: CLAUDE.md  Cargo.toml
apps/repo-manage/core/examples/: show_json_structure.rs
apps/repo-manage/core/src/: context.rs  lib.rs  test_utils.rs
apps/repo-manage/core/src/import/: csv.rs  excel.rs  mod.rs  normalize.rs  tests.rs
apps/repo-manage/core/src/lms/: legacy.rs  lms_client_factory.rs  mod.rs  types.rs
apps/repo-manage/core/src/operations/: error.rs  group_set.rs  lms.rs  mod.rs  platform.rs  repo.rs  validation.rs  verify.rs
apps/repo-manage/core/src/platform/: mod.rs
apps/repo-manage/core/tests/: operations_test.rs
apps/repo-manage/repo-manage-cli/: CLAUDE.md  Cargo.toml
apps/repo-manage/repo-manage-cli/src/: main.rs
apps/repo-manage/repo-manage-cli/tests/: integration_tests.rs
apps/repo-manage/repo-manage-core/: CLAUDE.md  Cargo.toml
apps/repo-manage/repo-manage-core/examples/: generate_schema.rs  show_json_structure.rs
apps/repo-manage/repo-manage-core/src/: error.rs  lib.rs  progress.rs  setup.rs  types.rs
apps/repo-manage/repo-manage-core/tests/: operations_test.rs
apps/repo-manage/schemas/: README.md
apps/repo-manage/schemas/commands/: manifest.json  manifest.stub.json
apps/repo-manage/schemas/meta/: index.schema.json  manifest.schema.json  types.schema.json
apps/repo-manage/schemas/types/: ActiveTab.schema.json  AffectedGroup.schema.json  AppError.schema.json  AppSettings.schema.json  Assignment.schema.json  AssignmentCoverage.schema.json  AssignmentId.schema.json  AssignmentMetadata.schema.json  AssignmentType.schema.json  CachedLmsGroup.schema.json  CanvasConfig.schema.json  CloneConfig.schema.json  CloneParams.schema.json  CommandResult.schema.json  ConfigParams.schema.json  CourseEntry.schema.json  CourseInfo.schema.json  CourseVerifyResult.schema.json  CoverageExportFormat.schema.json  CoverageReport.schema.json  CreateConfig.schema.json  DateFormat.schema.json  DeleteConfig.schema.json  DirectoryLayout.schema.json  EnrollmentType.schema.json  ExportSettings.schema.json  GenerateFilesParams.schema.json  GetGroupCategoriesParams.schema.json  GitConnection.schema.json  GitHubConfig.schema.json  GitIdentityMode.schema.json  GitLabConfig.schema.json  GitServerType.schema.json  GitSettings.schema.json  GitUsernameEntry.schema.json  GitUsernameImportSummary.schema.json  GitUsernameStatus.schema.json  GitVerifyResult.schema.json  GiteaConfig.schema.json  Group.schema.json  (+83 more)
apps/repo-manage/src/: App.css  App.tsx  bindings.ts  constants.ts  main.tsx
apps/repo-manage/src-tauri/: CLAUDE.md  Cargo.toml  students.yaml  tauri.conf.json
apps/repo-manage/src-tauri/capabilities/: default.json
apps/repo-manage/src-tauri/src/: error.rs  lib.rs  main.rs
apps/repo-manage/src/adapters/: settingsAdapter.test.ts  settingsAdapter.ts
apps/repo-manage/src/bindings/: commands.ts  tauri.ts  types.ts
apps/repo-manage/src/components/: ActionBar.test.tsx  ActionBar.tsx  ActionDropdown.tsx  AddCourseDialog.tsx  CourseDisplay.tsx  CourseSelector.tsx  FilePathInput.tsx  FormField.test.tsx  FormField.tsx  GitConfigSection.tsx  LmsConfigSection.tsx  LocalConfigSection.tsx  OptionsSection.tsx  OutputConfigSection.tsx  OutputConsole.test.tsx  OutputConsole.tsx  RepoNamingSection.tsx  SaveButton.tsx  Section.tsx  SettingsButton.tsx  SettingsMenu.tsx  SettingsSidebar.tsx  TokenDialog.tsx  UtilityBar.tsx
apps/repo-manage/src/constants/: defaults.ts  index.ts  layout.ts  theme.ts
apps/repo-manage/src/hooks/: useAppSettings.test.ts  useAppSettings.ts  useCloseGuard.ts  useDirtyState.test.ts  useDirtyState.ts  useLmsActions.ts  useLoadProfile.ts  useLoadSettings.test.ts  useLoadSettings.ts  useProfileActions.test.ts  useProfileActions.ts  useProgressChannel.ts  useRepoActions.ts  useTheme.ts  useWindowState.test.ts  useWindowState.ts
apps/repo-manage/src/services/: commandUtils.ts  lmsService.ts  repoService.ts  settingsService.ts
apps/repo-manage/src/stores/: appSettingsStore.ts  connectionsStore.ts  index.ts  lmsFormStore.test.ts  lmsFormStore.ts  operationStore.ts  outputStore.ts  profileSettingsStore.ts  repoFormStore.test.ts  repoFormStore.ts  rosterStore.ts  uiStore.ts
apps/repo-manage/src/types/: error.ts  load.ts  settings.ts
apps/repo-manage/src/utils/: formatDate.ts  nanoid.ts  operationContext.ts  snapshot.test.ts  snapshot.ts
apps/repo-manage/src/validation/: forms.test.ts  forms.ts
crates/canvas-lms/: Cargo.toml  README.md
crates/canvas-lms/src/: client.rs  endpoints.rs  lib.rs  models.rs  pagination.rs
crates/lms-client/: Cargo.toml  README.md
crates/lms-client/examples/: unified_client.rs
crates/lms-client/src/: auth.rs  client.rs  lib.rs
crates/lms-common/: Cargo.toml  README.md
crates/lms-common/examples/: auto_detect_example.rs
crates/lms-common/src/: error.rs  helpers.rs  lib.rs  retry.rs  storage.rs  traits.rs  types.rs
crates/moodle-lms/: Cargo.toml  README.md
crates/moodle-lms/src/: client.rs  lib.rs  models.rs
(+564 files in other folders)
