[workspace]
members = [
    "apps/repo-manage/src-tauri",
    "apps/repo-manage/repo-manage-core",
    "apps/repo-manage/repo-manage-cli",
    "crates/lms-common",
    "crates/lms-client",
    "crates/canvas-lms",
    "crates/moodle-lms",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["Repo Edu Contributors"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/repo-edu/repo-edu"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
csv = "1.3"

# Error handling
anyhow = "1"
thiserror = "2.0"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Git operations (vendored to avoid system OpenSSL dependency)
git2 = { version = "0.20", features = ["vendored-openssl", "vendored-libgit2"] }

# HTTP client (using rustls to avoid OpenSSL system dependency)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# CLI
clap = { version = "4", features = ["derive", "env"] }

# Tauri
tauri = { version = "2", features = [] }
tauri-build = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-window-state = "2"

# URL handling
url = "2.5"

# Token storage (optional for lms crates)
keyring = "3.6"
whoami = "1.5"

# OAuth2 (optional for lms crates)
oauth2 = "5.0"

# Testing
tempfile = "3.0"
mockito = "1.4"

[profile.dev]
debug = 1  # Line tables only, smaller artifacts

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
