[package]
name = "repo-manage-core"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Async runtime
tokio.workspace = true

# Serialization
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
csv.workspace = true
calamine.workspace = true
umya-spreadsheet.workspace = true

# Error handling
anyhow.workspace = true
thiserror.workspace = true

# Git operations
git2.workspace = true

# HTTP client for platform APIs
reqwest.workspace = true

# Date/time for timestamps
chrono.workspace = true

# Logging
log = "0.4"

# Platform-specific directories
dirs = "6.0"
directories = "6.0"

# JSON Schema generation and validation
jsonschema = "0.37"

# Pattern matching for file paths
glob = "0.3"

# URL handling
url.workspace = true

# Roster utilities
nanoid = "0.4"
bs58.workspace = true
unicode-normalization = "0.1"
deunicode = "1.4"
uuid.workspace = true

# LMS client (unified)
lms-client = { path = "../../../crates/lms-client" }
lms-common = { path = "../../../crates/lms-common" }

[dev-dependencies]
tempfile.workspace = true
mockito.workspace = true
