[package]
name = "repo-manage-tauri"
version.workspace = true
description = "RepoManage GUI Application"
authors.workspace = true
edition.workspace = true
default-run = "repo-manage-tauri"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "repo_manage_tauri_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build.workspace = true

[dependencies]
repo-manage-core = { path = "../repo-manage-core" }
lms-common = { path = "../../../crates/lms-common" }
tauri.workspace = true
tauri-plugin-opener.workspace = true
tauri-plugin-dialog.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
anyhow.workspace = true
chrono.workspace = true
dirs = "6.0"

[target.'cfg(target_os = "macos")'.dependencies]
objc2-foundation = { version = "0.3", default-features = false, features = ["NSString", "NSUserDefaults"] }

[dev-dependencies]
tempfile.workspace = true
